# ZK-SNARKS-TFM

./: .gitignore  Elapsed Time Metrics.md  Proof and Verification Key Sizes.md  Pss and Rss Metricts.md  README.md  stats.py
circom/: README.md  circuit.circom  circuit.r1cs  circuit_0000.zkey  circuit_0001.zkey  input.json  proof.json  public.json  verification_key.json  witness.wtns
circom/circuit_js/: circuit.wasm
circom/stats/: elapsed_secs.sh  execution_times.json  memory-pss-usage.sh  memory-rss-usage.sh  memory_pss_usage.json  memory_rss_usage.json
libsnark/: Dockerfile  Parent-CMakeLists.txt  README.md  Src-CMakeLists.txt  data.json  game.cpp
libsnark/check-ops/: check_ops.hpp  check_ops.tcc
libsnark/compare-or/: compare_or.hpp  compare_or.tcc
libsnark/poseidon/: poseidon.hpp  poseidon.tcc  poseidon_constants.hpp  poseidon_constants.tcc
libsnark/proof/: proof_data  vk_data
libsnark/stats/: elapsed_secs.sh  execution_times.json  memory-pss-usage.sh  memory-rss-usage.sh  memory_pss_usage.json  memory_rss_usage.json
noir/: Nargo.toml  Prover.toml  README.md
noir/src/: main.nr
noir/stats/: elapsed_secs.sh  execution_times.json  memory-pss-usage.sh  memory-rss-usage.sh  memory_pss_usage.json  memory_rss_usage.json
risczero/: README.md
risczero/core/: Cargo.toml
risczero/host/: Cargo.toml
risczero/host/src/: main.rs
risczero/host/stats/: main.rs
risczero/res/: input.json
risczero/stats/: execution_times.json  memory_pss_usage.json  memory_rss_usage.json
zksnark-app/: README.md  index.html  package.json
zksnark-app/backend/: db.js  (+4 more)
(+28 files in other folders)
