[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "normal"
path = "src/main.rs"

[[bin]]
name = "stats"
path = "stats/main.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = "2.0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
json = {version = "0.12.4"}
json-core = { path = "../core" }
bincode = "1.3.3"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
procfs = "0.14"
anyhow = "1.0"

